--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <div>
         <h5>Aquí va mi foto</h5>
     </div>
+    <div>
+        <h4>Aquí va la información extra</h4>
+    </div>
 </body>
 </html>
