--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <div>
         <h4>Aquí va la información extra</h4>
     </div>
+    <div>
+        <h4>Modificación nueva</h4>
+    </div>
 </body>
 </html>
