Commit al Master, un texto atractivo en interante

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>Página de prueba</title>
 </head>
 <body>
-    <h1>Esta es mi carta de presentación</h1>
-    <div>
-        <h5>Aquí va mi foto</h5>
+    <div id="container">
+        <div id="post">
+            <h1>Título atractivo e intersante</h1>
+            <p>Y este un párrafo donde vamos a explicar cosas increibles que se pueden hacer con
+                los branch's</p>
+        </div>
     </div>
-    <div>
-        <h4>Aquí va la información extra</h4>
-    </div>
-    <div>
-        <h4>Modificación nueva</h4>
-    </div>
+    
+
 </body>
 </html>
