Estructura inicial de la cabecera

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Título atractivo e intersante</h1>
             <p>Y este un párrafo donde vamos a explicar cosas increibles que se pueden hacer con
