--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             <h1>Título atractivo e intersante</h1>
             <p>Y este un párrafo donde vamos a explicar cosas increibles que se pueden hacer con
                 los branch's</p>
+            <p>Los blogs son la mejor forma de compartir información y tus ideas.
+                mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
+                Pero estadísticamente no lo eres.... por ahora.
+            </p>
         </div>
     </div>
     
