--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog MAESTRO</span>
         </div>
         <div id="post">
             <h1>Título atractivo e intersante</h1>
@@ -21,6 +21,7 @@
                 mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. 
                 Pero estadísticamente no lo eres.... por ahora.
             </p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
     
